<resources>
    <string name="app_name">FoodZen</string>
    <string name="recipes">Recipes</string>
    <string name="favourite">Favourite</string>
    <string name="food_joke">Food Joke</string>
    <string name="vegan">Vegan</string>
    <string name="main_course">Main Course</string>
    <string name="meal_types">Meal Types</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="salad">Salad</string>
    <string name="diet_type">Diet Type</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="apply">Apply</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="soup">Soup</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="paleo">Paleo</string>
    <string name="cuisine">Cuisine</string>
    <string name="african">African</string>
    <string name="american">American</string>
    <string name="british">British</string>
    <string name="cajun">Cajun</string>
    <string name="caribbean">Caribbean</string>
    <string name="chinese">Chinese</string>
    <string name="indian">Indian</string>
    <string name="exclude_intolerances">Exclude Intolerances</string>
    <string name="dairy">Dairy</string>
    <string name="egg">Egg</string>
    <string name="grain">Grain</string>
    <string name="gluten">Gluten</string>
    <string name="peanut">Peanut</string>
    <string name="sea_food">Sea Food</string>
    <string name="sesame">Sesame</string>
    <string name="shellfish">ShellFish</string>
    <string name="tree_nut">Tree Nut</string>
    <string name="wheat">Wheat</string>
    <string name="filter_recipes_by">Filter recipes by</string>
    <string name="popular">Popular</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="no_internet_connections">No Internet Connections</string>
    <string name="no_filter">No Filter</string> <!-- Also change in Constants.kt -->
    <string name="ACTION_SHOW_RECIPES">Show Recipes Action</string>
    <string name="share">Share</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="generate">Generate</string>
    <string name="share_card_in_app">Share card in app</string>
    <string name="generate_beautiful_recipe_card_and_share_with_your_friends">Generate beautiful Recipe Card and share with your friends</string>
    <string name="no_internet_showing_cached_data">No Internet Connections.Showing saved recipes if available</string>
    <string name="server_error_occurred">Server error occurred</string>
    <string name="no_recipe_found">No recipe found with the given filters\nRemove some filters and try again</string>
    <string name="recipe_card_not_found">No recipe card found for this id</string>
    <string name="link_share_message">Take a look at \"%s\" in FoodZen app\n\n%s\n\n*Link works if app is installed</string>
    <string name="unknown_error">An error occurred.Please try again later</string>
    <string name="internet_error">Unable to connect to network.Please try again later</string>
    <string name="ingredient_count_text">%d ingredients</string>
    <string name="recipes_popular">Popular</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_analyzed_instruction_error_message">We couldn\'t find step breakdown for this recipe</string>
    <string name="load_recipe_details_error">We are facing trouble getting details of this recipe</string>
    <string name="search_by_ingredients">Search by ingredients</string>
    <string name="cook_with_what_you_already_have_scan_your_grocery_bill_or_manually_add_ingredients">Cook with what you already have. Scan your grocery bill or manually add ingredients</string>
    <string name="search">Search</string>
    <string name="scan_your_grocery_bill_to_detect_ingredients_automatically">Scan your grocery bill to detect ingredients automatically</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="search_ingredients">Search ingredients</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="create_stunning_recipe_cards_and_share_it_anywhere_you_like">Create stunning Recipe Cards and share it anywhere you like</string>
    <string name="recipe_id">Recipe Id</string>
</resources>