<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.recipecard.RecipeCardFragment">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:text="@string/create_stunning_recipe_cards_and_share_it_anywhere_you_like"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           android:layout_marginHorizontal="20dp"
            app:contentPadding="4dp"
            app:layout_constraintBottom_toTopOf="@+id/generate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_id_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toTopOf="@+id/share_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generate_button"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/card_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/sample_recipe_card" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"
                tools:visibility="visible" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:padding="10dp"
            android:text="@string/share_card_in_app"
            app:icon="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/generate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:text="@string/generate"
            app:layout_constraintBottom_toTopOf="@+id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>