<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.recipes.RecipesFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorOnPrimary" />

        <com.todkars.shimmer.ShimmerRecyclerView
            android:id="@+id/shimmerRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:shimmer_recycler_item_count="5"
            app:shimmer_recycler_layout="@layout/place_holder_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/filter_recipes_by"
            android:src="@drawable/ic_restaurant"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/error_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:src="@drawable/ic_sad"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32"
            app:tint="@color/darkGray"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            android:gravity="center"
            android:text="@string/no_internet_connections"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/error_image_view"
            app:layout_constraintStart_toStartOf="@+id/error_image_view"
            app:layout_constraintTop_toBottomOf="@+id/error_image_view"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>